@@ -269,7 +269,7 @@ void LuxCoreApp::LoadRenderConfig(const std::string &fileName) {
 			//LA_LOG("RenderConfig: \n" << renderConfigProps);
 			//LA_LOG("Scene: \n" << sceneProps);
 
-			Scene *scene = Scene::Create(renderConfigProps.Get(Property("images.scale")(1.f)).Get<float>());
+			Scene *scene = Scene::Create();
 			scene->Parse(sceneProps);
 			config = RenderConfig::Create(renderConfigProps, scene);
 			config->DeleteSceneOnExit();
