@@ -1,6 +1,13 @@
 film.width = 1200
 film.height = 900
 scene.file = randmap.scn
+##
+#scene.images.resizepolicy.type = NONE
+#
+#scene.images.resizepolicy.type = FIXED
+#scene.images.resizepolicy.scale = 0.1
+#scene.images.resizepolicy.minsize = 2
+##
 # Film image pipeline plug-ins
 film.imagepipeline.0.type = TONEMAP_LINEAR
 film.imagepipeline.1.type = GAMMA_CORRECTION
