@@ -19,6 +19,7 @@
 * Regularize coordinate system to solve some anisotropic related issue with glossy material (pull request #521)
 * UVRandomMapping2D now supports optional random rotation step parameter (issue #528)
 * LocalRandomMapping3D now supports optional random rotation step parameter (issue #528)
+* Introduced the concept of Scene texture image maps resize policy and the support for NONE and FIXED policies
 
 ### Fixed Bugs
 
